--- a/37_IOCProj-AutoWiring/.project
+++ b/37_IOCProj-AutoWiring/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>37_IOCProj-AutoWiring</name>
+	<name>37_IOCProj-AutoWiring-all6Types</name>
 	<comment></comment>
 	<projects>
 	</projects>
